<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partida_jugador1"
                android:id="@+id/nomJuador1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"

            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c1j1"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta1j1"
                android:background="@drawable/v0"

                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c2j1"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta2j1"
                android:background="@drawable/v0"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c3j1"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta3j1"
                android:background="@drawable/v0"

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c4j1"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/partida_espacio1"
                    android:background="@drawable/v1"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c4j2"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/partida_espacio2"
                    android:background="@drawable/v1"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pinta"
                    android:rotation="90"

                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/partida_pinta"
                    android:background="@drawable/b6"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mazo"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/partida_mazo"
                    android:background="@drawable/v0"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c1j2"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta1j2"
                android:background="@drawable/b1"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c2j2"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta2j2"
                android:background="@drawable/o1"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c3j2"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/partida_carta3j2"
                android:background="@drawable/o12"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partida_jugador2"
                android:id="@+id/nomJugador2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partida_mensajes"
                android:id="@+id/MensajesJuego" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>