<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="60sp"
        android:textStyle="bold"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/boton1"
        android:id="@+id/buttonCrearPartida"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/redondo"
        android:textStyle="bold"
        android:textSize="20sp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton2"
        android:id="@+id/buttonUnirPartida"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/redondo"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton3"
        android:id="@+id/button3"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/redondo"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton4"
        android:id="@+id/buttonInstrucciones"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/redondo"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton5"
        android:id="@+id/buttonReglas"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/redondo"
        android:textStyle="bold"
        android:textSize="20sp"
        />

</LinearLayout>
</ScrollView>